# colorhug-plus-hardware

./: Makefile.am  hardware.pcb  hardware.sch
symbols/: CA3140MZ.tsym  MBT3904DW1T1.tsym  Makefile.am  SN74LS367AD.tsym  SPARK-DET-VIS.tsym
